--- a/style.css
+++ b/style.css
@@ -27,3 +27,9 @@
   a:visited,
   a:hover,
   a:active { color: white; }
+  .social {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+  }
+  
