--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@
     bottom: 30%;
     display: none;
   }
+  .socal div form input { display: block; }
   a,
   a:visited,
   a:hover,
@@ -42,5 +43,5 @@
     .content .inner { width: 100% }
     .social { width: 100%; }
     .social div { float: left; margin: 0 8px;}
-    .social div input { float: left }
+    .socal div form input { display: inline-block; }
   }
