--- a/style.css
+++ b/style.css
@@ -34,9 +34,9 @@
     bottom: 0;
   }
     @media (max-width: 1080px) {
-    h1 { font-size: 44px; }
-    h2 { font-size: 36px; }
-    h3 { font-size: 28px; }
+    h1 { font-size: 60px; }
+    h2 { font-size: 40px; }
+    h3 { font-size: 30px; margin-top: 30px; }
     .content { background-position: top center; }
   }
   @media (max-width: 800px) {
