--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   .content {
     background: #15140F url(./hands-up.jpg) no-repeat top left;
     background-size: cover;
-    font-family: Impact sans-serif;
+    font-family: Impact, sans-serif;
     font-size: 30px;
     color: white;
     top: 0;
