--- a/style.css
+++ b/style.css
@@ -28,6 +28,8 @@
   }
   .logo { width: 120px; }
   .socal div form input { display: block; }
+  form { padding: 0 0 20px; }
+  p { font-family: "Helvetica Neue", Helvetica-Neue, Helvetica, sans-serif; font-size: .618em; }
   a,
   a:visited,
   a:hover,
